[package]
name = "nectar_contract"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "MPC20-compliant Nectar Token smart contract"
readme = "README.md"

[lib]
crate-type = ["cdylib"]
name = "nectar_contract"

[features]
default = ["abi"]
abi = [
  "pbc_contract_common/abi",
  "pbc_contract_codegen/abi",
  "pbc_traits/abi",
  "create_type_spec_derive/abi",
  "pbc_lib/abi"
]


[dependencies]

defi_common = { path = "../defi/rust/defi-common" }



pbc_contract_common = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", branch = "main" }
pbc_contract_codegen = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", branch = "main" }
pbc_traits = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", branch = "main" }
pbc_lib = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", branch = "main" }
read_write_rpc_derive = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", branch = "main" }
read_write_state_derive = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", branch = "main" }
create_type_spec_derive = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", branch = "main" }
pbc_zk = { git = "https://git@gitlab.com/partisiablockchain/language/contract-sdk.git", branch = "main" }


# Standard Rust crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

